# boltzmann-solver

./: .gitattributes  .gitignore  .gitmodules  .travis.yml  Cargo.toml  Pipfile  README.md  aliases.js  crates.js  index.html  pyproject.toml  rustfmt.toml  search-index.js  settings.html  source-files.js
.cargo/: katex-macros.json  katex.html
.ci/: rust-doc.sh
arrayvec/: all.html  index.html  struct.ArrayString.html  struct.ArrayVec.html  struct.CapacityError.html  struct.Drain.html  struct.IntoIter.html  trait.Array.html  trait.RangeArgument.html
boltzmann_solver/: SingleSpecies.t.html  StandardModel.t.html  Statistic.t.html  Universe.t.html  all.html  enum.Statistic.html  index.html  sidebar-items.js  struct.SingleSpecies.html  struct.StandardModel.html  trait.Universe.html
c_vec/: CSlice.t.html  CVec.t.html  all.html  index.html  struct.CSlice.html  struct.CVec.html
cfg_if/: all.html  index.html  macro.cfg_if!.html  macro.cfg_if.html
ci/: after_success.sh  before_script.sh  rust-doc.sh  script.sh
crossbeam_deque/: all.html  enum.Steal.html  index.html  struct.Injector.html  struct.Stealer.html  struct.Worker.html
crossbeam_epoch/: all.html  fn.default_collector.html  fn.is_pinned.html  fn.pin.html  fn.unprotected.html  index.html  struct.Atomic.html  struct.Collector.html  struct.CompareAndSetError.html  struct.Guard.html  struct.LocalHandle.html  struct.Owned.html  struct.Shared.html  trait.CompareAndSetOrdering.html  trait.Pointer.html
crossbeam_queue/: all.html  index.html  struct.ArrayQueue.html  struct.PopError.html  struct.PushError.html  struct.SegQueue.html
crossbeam_utils/: all.html  index.html  struct.Backoff.html  struct.CachePadded.html
either/: all.html  enum.Either.html  index.html  macro.try_left!.html  macro.try_left.html  macro.try_right!.html  macro.try_right.html
examples/: common.rs.tpl
gmp_mpfr_sys/: all.html  index.html  macro.mpfr_round_nearest_away.html  mpfr_round_nearest_away.m.html
itertools/: Diff.t.html  Either.t.html  EitherOrBoth.t.html  Itertools.t.html  all.html  any.v.html  assert_equal.v.html  chain.v.html  cloned.v.html  diff_with.v.html  enum.Diff.html  enum.Either.html  enum.EitherOrBoth.html  enum.FoldWhile.html  enum.MinMaxResult.html  enum.Position.html  enumerate.v.html  equal.v.html  fn.all.html  fn.any.html  fn.assert_equal.html  fn.chain.html  fn.cloned.html  fn.concat.html  fn.cons_tuples.html  fn.diff_with.html  fn.enumerate.html  fn.equal.html  fn.flatten.html  fn.fold.html  fn.interleave.html  fn.iterate.html  fn.join.html  fn.kmerge.html  fn.kmerge_by.html  fn.max.html  fn.merge.html  fn.merge_join_by.html  fn.min.html  fn.multipeek.html  (+33 more)
lazy_static/: all.html  fn.initialize.html  index.html  macro.lazy_static!.html  macro.lazy_static.html  trait.LazyStatic.html
libc/: ABDAY_2.v.html  ABDAY_3.v.html  ABDAY_4.v.html  ABDAY_5.v.html  ABDAY_6.v.html  ABDAY_7.v.html  ABMON_12.v.html  ABMON_2.v.html  ABMON_3.v.html  ABMON_4.v.html  ABMON_7.v.html  ABMON_8.v.html  ABMON_9.v.html  AF_ALG.v.html  AF_APPLETALK.v.html  AF_ASH.v.html  AF_ATMPVC.v.html  AF_ATMSVC.v.html  AF_AX25.v.html  AF_CAN.v.html  AF_DECnet.v.html  AF_IB.v.html  AF_INET.v.html  AF_IPX.v.html  AF_LLC.v.html  AF_NETLINK.v.html  AF_NFC.v.html  AF_PPPOX.v.html  AF_ROUTE.v.html  AF_RXRPC.v.html  AF_SECURITY.v.html  AF_TIPC.v.html  AF_VSOCK.v.html  AF_WANPIPE.v.html  AF_XDP.v.html  AI_ADDRCONFIG.v.html  AI_NUMERICHOST.v.html  AI_NUMERICSERV.v.html  AI_PASSIVE.v.html  ALG_OP_DECRYPT.v.html  (+6394 more)
log/: Level.t.html  LevelFilter.t.html  Log.t.html  Metadata.t.html  MetadataBuilder.t.html  ParseLevelError.t.html  Record.t.html  RecordBuilder.t.html  STATIC_MAX_LEVEL.v.html  SetLoggerError.t.html  all.html  constant.STATIC_MAX_LEVEL.html  enum.Level.html  enum.LevelFilter.html  fn.logger.html  fn.max_level.html  fn.set_boxed_logger.html  fn.set_logger.html  fn.set_logger_racy.html  fn.set_max_level.html  index.html  info.m.html  log.m.html  log_enabled.m.html  logger.v.html  macro.debug!.html  macro.debug.html  macro.error!.html  macro.error.html  macro.info!.html  macro.info.html  macro.log!.html  macro.log.html  macro.log_enabled!.html  macro.log_enabled.html  macro.trace!.html  macro.trace.html  macro.warn!.html  macro.warn.html  max_level.v.html  (+9 more)
mathematica/: .project  BoltzmannSolver.nb  GenerateTestData.wl  PacletInfo.m  PacletInfo.wl  function_approximations.nb  mandelstam.nb
matrixmultiply/: all.html  fn.dgemm.html  fn.sgemm.html  index.html  sgemm.v.html
maybe_uninit/: all.html  index.html  union.MaybeUninit.html
memoffset/: all.html  index.html  macro.offset_of!.html  macro.offset_of.html  macro.raw_field!.html  macro.raw_field.html  macro.span_of!.html  macro.span_of.html
ndarray/: ArcArray.t.html  Array.t.html  Array2.t.html  Array3.t.html  ArrayBase.t.html  ArrayD.t.html  ArrayView.t.html  ArrayView2.t.html  ArrayViewMut.t.html  ArrayViewMut1.t.html  ArrayViewMut2.t.html  Axis.t.html  AxisDescription.t.html  DataClone.t.html  DataMut.t.html  DataOwned.t.html  DataShared.t.html  FixedInitializer.t.html  FoldWhile.t.html  IndexLonger.t.html  IntoDimension.t.html  IntoNdProducer.t.html  Ix.t.html  Ix1.t.html  Ix1.v.html  Ix2.t.html  Ix2.v.html  Ix3.t.html  Ix4.t.html  Ix4.v.html  Ix5.v.html  Ix6.t.html  Ix6.v.html  IxDyn.t.html  IxDynImpl.t.html  Ixs.t.html  LinalgScalar.t.html  NdFloat.t.html  NdIndex.t.html  OwnedArcRepr.t.html  (+145 more)
nodrop/: all.html  index.html  struct.NoDrop.html
num/: all.html  fn.abs.html  fn.abs_sub.html  fn.cast.html  fn.checked_pow.html  fn.clamp.html  fn.one.html  fn.pow.html  fn.range.html  fn.range_inclusive.html  fn.range_step.html  fn.range_step_inclusive.html  fn.signum.html  fn.zero.html  index.html  struct.BigInt.html  struct.BigUint.html  struct.Complex.html  trait.Bounded.html  trait.CheckedAdd.html  trait.CheckedDiv.html  trait.CheckedMul.html  trait.CheckedSub.html  trait.Float.html  trait.FromPrimitive.html  trait.Integer.html  trait.Num.html  trait.NumCast.html  trait.One.html  trait.PrimInt.html  trait.Saturating.html  trait.Signed.html  trait.ToPrimitive.html  trait.Unsigned.html  trait.Zero.html  (+2 more)
(+14310 files in other folders)
