[package]
name = "boltzmann-solver"
version = "0.1.0"
authors = ["JP-Ellis <josh@jpellis.me>"]
description = "Numerical solver for Boltzmann equations within the context of baryogenesis and leptogenesis."
documentation = "https://docs.rs/boltzmann-solver/"
readme = "README.md"
repository = "https://github.com/hep-rs/boltzmann-solver/"
license = "GPL-3.0-or-later"
keywords = ["science", "physics"]
categories = ["science"]

edition = "2018"

[badges]
codecov = { repository = "hep-rs/boltzmann-solver", branch = "master", service = "github" }

[dependencies]
log = "0.4"
ndarray = "0.14"
num = "0.3"
quadrature = "0.1"
special-functions = { git = "https://github.com/hep-rs/special-functions.git" }
rand = "0.7"

# Optional dependencies
rayon = { optional = true, version = "1.5" }
serde = { optional = true, version = "1.0", features = ["derive"] }

[dev-dependencies]
chrono = "0.4"
csv = "1.1"
fern = { version = "0.6", features = ["colored"] }
itertools = "0.9"
num = "0.3"
serde_json = "1.0"

[features]
default = ["rk87", "parallel", "serialization"]
# default = ["rk87", "serialization"]

nightly = []
serialization = ["serde", "ndarray/serde", "num/serde"]
parallel = ["rayon", "ndarray/rayon"]

rk21 = []
rk32 = []
rk43 = []
rk54 = []
rk65 = []
rk76 = []
rk87 = []
rk98 = []

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "katex.html"]
