[package]
authors       = ["JP-Ellis <josh@jpellis.me>"]
categories    = ["science"]
description   = "Numerical solver for Boltzmann equations within the context of baryogenesis and leptogenesis."
documentation = "https://docs.rs/boltzmann-solver/"
keywords      = ["science", "physics"]
license       = "GPL-3.0-or-later"
name          = "boltzmann-solver"
readme        = "README.md"
repository    = "https://github.com/hep-rs/boltzmann-solver/"
version       = "0.1.0"

edition = "2021"

[badges]
codecov = { repository = "hep-rs/boltzmann-solver", branch = "master", service = "github" }

[dependencies]
log               = "0.4"
ndarray           = "0.15"
num               = "0.4"
quadrature        = "0.1"
roots             = "0.0.7"
special-functions = { git = "https://github.com/hep-rs/special-functions.git" }

# Optional dependencies
blas-src   = { optional = true, version = "0.8" }
rayon      = { optional = true, version = "1.5" }
serde      = { optional = true, version = "1.0", features = ["derive"] }
serde_json = { optional = true, version = "1.0" }


[dev-dependencies]
blas-src     = { version = "0.8", features = ["openblas"] }
csv          = "1.1"
fern         = { version = "0.6", features = ["colored"] }
itertools    = "0.10"
openblas-src = { version = "0.10", features = ["system"] }
rand         = "0.8"
serde        = { version = "1.0", features = ["derive"] }
serde_json   = "1.0"
zstd         = "0.11"


[features]
default = ["serialization", "blas", "parallel", "min-width"]

blas          = ["ndarray/blas", "blas-src"]
debug         = ["serde_json"]
nightly       = []
parallel      = ["rayon", "ndarray/rayon"]
serialization = ["serde", "ndarray/serde", "num/serde"]

rk21 = []
rk32 = []
rk43 = []
rk54 = []
rk65 = []
rk76 = []
rk87 = []
rk98 = []

min-width = []

# Use slightly more optimized builds when running tests, and fully optimized
# dependencies.
[profile.test]
opt-level = 1
    [profile.test.package."*"]
    opt-level = 3

# Add debug information in release builds
[profile.release]
debug = true

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "katex.html"]
