[tool.poetry]
name = "boltzmann-solver"
version = "0.1.0"
description = ""
authors = ["JP-Ellis <josh@jpellis.me>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
ipywidgets = "^7.6.5"
numpy = "^1.21.4"
pandas = "^1.3.4"
scipy = "^1.7.2"
plotly = "^5.3.1"

[tool.poetry.dev-dependencies]
black = "^21.10b0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
