[tool.poetry]
authors     = ["JP-Ellis <josh@jpellis.me>"]
description = ""
name        = "boltzmann-solver"
version     = "0.1.0"

    [tool.poetry.dependencies]
    Jinja2 = "^3.0.3"
    # ipywidgets = { version = "^8.0.0b1", allow-prereleases = true }
    ipywidgets = "^7"
    matplotlib = "^3.5.1"
    numpy      = "^1.21.4"
    pandas     = "^1.3.4"
    plotly     = "^5.3.1"
    python     = ">=3.9,<3.11"
    scipy      = "^1.7.2"
    tqdm       = "^4.63.0"

    [tool.poetry.dev-dependencies]
    black                     = "^21.10b0"
    isort                     = "^5.10.1"
    jupyter-dash              = "^0.4.1"
    jupyterlab                = "^3.3.0"
    jupyterlab-code-formatter = "^1.4.10"
    zstandard = "^0.17.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires      = ["poetry-core>=1.0.0"]
